--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hackathon JS</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/frontend/css/main.css">
 </head>
 <body>
 
