--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <title>Hackathon JS</title>
     <link rel="stylesheet" href="/frontend/css/main.css">
+    <link rel="stylesheet" href="/frontend/css/colors.css">
+    <script src = "https://d3js.org/d3.v4.min.js"></script>
+
 </head>
 <body>
-
+    <div class="main">
+        <div class="test">
+            <h1 class="title">PostgresPro parser</h1>
+            <div class="side">
+                <button class="style_btn">тест</button>
+                <img src="/frontend/img/bg.jpg" alt="test">
+            </div>
+        </div>
+    </div>
+    <rect width="30" height="30"></rect>
+    <circle cx="50" cy="15" r="15" ></circle>
+    <path d="M105,0L105,30L135,30"></path>
+    <path d="M70,0l0,30l30,0"></path>
+    <script src="/frontend/index.js"></script>
 </body>
 </html>
