JS done... maybe

--- a/backend/index.html
+++ b/backend/index.html
@@ -9,21 +9,22 @@
 <body>
 <div class="main">
     <div class="test">
-        <h1 class="title">PostgresPro parser</h1>
+        <h1 class="title">PostgresPro OPEN-DATA</h1>
         <div class="side">
             <div>
                 <p class="text-p">Ввод URL</p>
                 <p><input type="text" class="input-text"></p>
                 <p class="text-p">Ввод 2</p>
-                <p><textarea type="text" class="output-text" readonly></textarea></p>
+                <p><textarea id="output-one" type="text" class="output-text" readonly>ХУЙ ХУЙХУЙ</textarea></p>
                 <p class="text-p">Ввод 3</p>
-                <p><textarea type="text" class="output-text" readonly></textarea></p>
+                <p><textarea id="output-two" type="text" class="output-text" readonly></textarea></p>
             </div>
             <div>
-                <button onclick="pizdec();" class="style_btn">Кнопка</button>
+                <button class="style_btn">Кнопка</button>
             </div>
         </div>
     </div>
+    <script src="/backend/js/index.js"></script>
 </div>
 </body>
 </html>
