--- a/backend/index.html
+++ b/backend/index.html
@@ -17,14 +17,14 @@
                 <p class="text-p">Ввод 2</p>
                 <p><textarea id="output-one" type="text" class="output-text" readonly>ХУЙ ХУЙХУЙ</textarea></p>
                 <p class="text-p">Ввод 3</p>
-                <p><textarea id="output-two" type="text" class="output-text" readonly></textarea></p>
+                <p><textarea id="output-two" type="text" class="output-text" readonly>Пиздец</textarea></p>
             </div>
             <div>
-                <button class="style_btn">Кнопка</button>
+                <button class="style_btn" id="button">Кнопка</button>
             </div>
         </div>
     </div>
-    <script src="/backend/js/index.js"></script>
 </div>
+<script src="/backend/js/index.js"></script>
 </body>
 </html>
